--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
+<html>
+<head>
+  <title>Memory Game</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-     </body>
+</head>
+
+<body>
+  <nav class="clearfix">
+    <a href="#">Instructions</a>
+    <a href="#">Game</a>
+  </nav>
+
+  <header>
+    <h1>Memory Game</h1>  
+    <h2>Instructions</h2>
+  </header>
+    <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+
+  <div class="board">
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+  </div>
+
+    <footer>
+    <img src="http://i.imgur.com/1Pz4d2P.png">
+    <p>© Created By <span class="name">Moshe Srur</span></p>
+  </footer>
+
+  <script src="main.js"></script>
 
 
+</body>
 </html>
